# pizzeria_new

./: Dockerfile  docker-compose.yaml
src/: pyproject.toml  utils.py
src/app/pizza_context/infrastructure/: apps.py  urls.py
src/app/pizza_context/infrastructure/migrations/: 0001_initial.py
src/app/pizza_context/infrastructure/models/: ingredient.py  pizza.py
src/app/pizza_context/infrastructure/ports/http/: __init__.py  ingredient.py  pizza.py
src/config/: settings.py  urls.py
